trunk/Archive2/43/db0f25248185c4/output
main.cpp: In function 'int main()':
main.cpp:22:18: error: could not convert 'v' from 'std::vector<int>' to 'std::vector<long int, std::allocator<long int> >'
     attach_2(v, V);
                  ^
1
